# HH_DB_API

./: .env.example  README.md  pyproject.toml
src/: DB_Manager.py  DB_creater.py  head_hunter.py  hh_api.py  main.py  vacancy.py
